# kaldav

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: filter.rs  lib.rs  object.rs
src/: calendar.rs  client.rs  home.rs  lib.rs  method.rs  object.rs  result.rs
src/elements/: filter.rs  mkcalendar.rs  mod.rs
