[workspace]
members = [".", "derive"]

[package]
name = "kaldav"
version = "0.4.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"
description = "Caldav client"
license = "MIT"

[dependencies]
ikal = "0.4"
sxd-document = "0.3"
sxd-xpath = "0.4"
thiserror = "2.0"
url = "2.0"

[dependencies.kaldav-derive]
version = "0.2"
path = "derive"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.attohttpc]
version = "0.30"
features = ["basic-auth"]

[dev-dependencies]
env_logger = "0.11"
log = "0.4"
httpmock = "0.7"

[dev-dependencies.clap]
version = "4.0"
features = ["derive"]
