[workspace]
members = [".", "derive"]

[package]
name = "kaldav"
version = "0.4.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"
description = "Caldav client"
license = "MIT"
repository = "https://github.com/kaldav-rs/kaldav"

[dependencies]
ikal = "0.4"
sxd-document = "0.3"
sxd-xpath = "0.4"
thiserror = "2.0"
url = "2.0"
webdav = "0.1"

[dependencies.kaldav-derive]
version = "0.2"
path = "derive"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.attohttpc]
version = "0.30"
features = ["basic-auth"]

[dependencies.uuid]
version = "1.18"
features = ["v7"]

[dev-dependencies]
env_logger = "0.11"
log = "0.4"
httpmock = "0.8"

[dev-dependencies.clap]
version = "4.0"
features = ["derive"]
